--- a/파이썬문법정리.md
+++ b/파이썬문법정리.md
@@ -137,6 +137,7 @@ input()이용 : 문자열<br>
 입력받은 문자열을 띄어쓰기로 구분해서 정수로 저장할때 ->
 ```py
 list(map(int, input().split()))
+n,m,k = map(int, input().split()) # n,m,k로 각자 입력받아 변수 저장
 ```
 
 ### 숫자를 입력받아 정렬하는 예제
