--- a/파이썬문법정리.md
+++ b/파이썬문법정리.md
@@ -158,3 +158,12 @@ print에서 ,로 구분해서 넣으면 띄어쓰기로 출력
 
 
 str() -> 데이터를 문자열로 바꾼다.
+
+
+### min, max
+list에서 가장 큰것, 작은것을 작을때
+list의 이름을 data라고 하면
+```py
+MIN = min(data)
+MAX = max(data)
+```
