--- a/파이썬문법정리.md
+++ b/파이썬문법정리.md
@@ -161,7 +161,7 @@ str() -> 데이터를 문자열로 바꾼다.
 
 
 ### min, max
-list에서 가장 큰것, 작은것을 작을때
+list에서 가장 큰것, 작은것을 구할때 <br>
 list의 이름을 data라고 하면
 ```py
 MIN = min(data)
